[build-system]
build-backend = "flit_core.buildapi"
requires = [
    "flit_core >=3.4,<4",
    "setuptools_scm",
]

[project]
name = "cellphonedb"
requires-python = ">=3.7"
readme = {file = "README.md", content-type="text/markdown"}
classifiers = [
    "Intended Audience :: Science/Research",
]
dependencies = [
    "pandas>=1.3.4",
    "numpy>=1.21.5",
    "numpy-groupies",
    "requests>=2.25,<3.0",
    "geosketch==0.3",
    "anndata>=0.8",
]
dynamic = ["version"]

[tool.flit.sdist]
exclude = [
    'example_data',
]

[tool.black]
line-length = 88
target-version = ["py38"]
exclude = "^/build/.*$"
